# fastapi-silk-profiler

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: implementation-roadmap.md  index.md
examples/: __init__.py
examples/basic_app/: __init__.py  main.py
skills/fastapi-silk-dev/: SKILL.md
skills/fastapi-silk-dev/scripts/: bootstrap.sh  demo_db_flow.sh  quality.sh  run_example.sh
src/fastapi_silk_profiler/: __init__.py  config.py  endpoints.py  middleware.py  models.py  query_analysis.py  renderers.py  setup.py  sql_capture.py  store.py
src/fastapi_silk_profiler/templates/: latest_dashboard.html  reports_dashboard.html
tests/: test_profiler.py  test_query_analysis.py
