[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "fastapi-silk-profiler"
version = "0.1.0"
description = "Reusable FastAPI profiling middleware with pyinstrument and SQL capture"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
license-files = ["LICENSE"]
authors = [{ name = "Contributors" }]
keywords = ["fastapi", "profiling", "middleware", "pyinstrument", "sqlalchemy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: AsyncIO",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Framework :: FastAPI",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.110.0",
  "jinja2>=3.1.0",
  "pyinstrument>=5.0.0",
  "sqlparse>=0.5.0",
  "sqlalchemy>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/fastapi-silk-profiler/fastapi-silk-profiler"
Repository = "https://github.com/fastapi-silk-profiler/fastapi-silk-profiler"
Issues = "https://github.com/fastapi-silk-profiler/fastapi-silk-profiler/issues"
Changelog = "https://github.com/fastapi-silk-profiler/fastapi-silk-profiler/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "twine>=5.1.0",
  "uvicorn>=0.30.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_silk_profiler"]

[tool.hatch.build.targets.sdist]
include = [
  "src/fastapi_silk_profiler/templates/*.html",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ANN", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["pyinstrument", "sqlparse"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --cov=fastapi_silk_profiler --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]
pythonpath = ["src"]
